<resources>
    <string name="app_name">coffeeMachine</string>
    <string name="add_your_cup_of_coffee_data">Add Data</string>
    <string name="your_cup_of_coffee_data_is_none">Your Cup of Coffee Data is none</string>
    <string name="date">Date</string>
    <string name="coffee_brand">Coffee Brand</string>
    <string name="brew_level">Brew Level (Ounces)</string>
    <string name="milk_level">Milk Level (Ounces)</string>
    <string name="notes">Notes</string>
    <string name="add">Add</string>
    <string name="ounces">Ounces</string>
    <string name="listTitle">Your daily data of expresso</string>
    <string name="id">ID</string>
    <string name="date_completed">Date Completed:</string>
    <string name="brew_level_result">Brew Level (Ounces):</string>
    <string name="milk_level_result">Milk Level (Ounces):</string>
    <string name="notes_result">Notes:</string>

    <string-array name="countriesBrand">
        <item> Tully </item>
        <item> Starbucks</item>
        <item>Cafe Bustelo</item>
        <item>Cafe Du Monde</item>
        <item>Caribou </item>
        <item> Dunkin’ Donuts</item>
        <item>Folgers </item>
        <item>Gevalia </item>
        <item> Green Mountain Coffee Roasters </item>
        <item> Jacob’s Coffee</item>
        <item>Keurig </item>
        <item> Kirkland Signature </item>
        <item> Maxwell House </item>
        <item> McCafe (McDonalds Brand) </item>
        <item> Peet’s Coffee </item>
        <item> Yuban</item>
    </string-array>

    <string-array name="brewList">
        <item>0.0</item>
        <item>0.5</item>
        <item>1.0</item>
        <item>1.5</item>
        <item>2.0</item>
        <item>2.5</item>
        <item>3.0</item>
    </string-array>
</resources>