<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/labelDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_completed"
                android:layout_toEndOf="@+id/imageView"
                android:layout_below="@+id/brandtxtview"
                android:layout_marginStart="10dp"/>

            <TextView
                android:id="@+id/labelbrew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/imageView"
                android:layout_below="@+id/datetxtview"
                android:text="@string/brew_level_result"
                android:layout_marginStart="10dp"/>

            <TextView
                android:id="@+id/labelMilk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/milk_level_result"
                android:layout_toEndOf="@+id/imageView"
                android:layout_below="@+id/brewtxtview"
                android:layout_marginStart="10dp" />
            <TextView
                android:id="@+id/labelNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/milktxtview"
                android:layout_toEndOf="@+id/imageView"
                android:layout_marginStart="10dp"
                android:text="@string/notes_result" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/coffe"
                android:id="@+id/imageView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/IDtxtview"
                android:layout_toEndOf="@id/imageView"
                android:layout_margin="10dp" />

            <TextView
                android:id="@+id/notetxtview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/milktxtview"
                android:layout_toEndOf="@+id/labelNote"
                android:layout_marginStart="10dp"
                />

            <TextView
                android:id="@+id/brewtxtview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/labelbrew"
                android:layout_below="@+id/datetxtview"
                android:layout_marginStart="10dp"/>

            <TextView
                android:id="@+id/milktxtview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_toEndOf="@+id/labelMilk"
                android:layout_below="@+id/brewtxtview"
                android:layout_marginStart="10dp" />

            <TextView
                android:id="@+id/brandtxtview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coffee_brand"
                android:layout_toEndOf="@+id/imageView"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_marginStart="10dp" />

            <TextView
                android:id="@+id/datetxtview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/labelDate"
                android:layout_below="@+id/brandtxtview"
                android:layout_marginStart="10dp"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>